--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <style>
-        /** Base Colors */
         :root {
             --clr-dark-a0: #000000;
             --clr-light-a0: #ffffff;
@@ -134,22 +133,22 @@
 <body>
 <div class="login-container">
     <h2>Login</h2>
-    <form th:action="@{/login}" method="post">
+    <form method="post" th:action="@{/login}">
         <div class="form-group">
             <label for="username">Username</label>
-            <input id="username" type="text" name="username" required/>
+            <input id="username" name="username" required type="text"/>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input id="password" type="password" name="password" required/>
+            <input id="password" name="password" required type="password"/>
         </div>
 
         <button type="submit">Login</button>
 
-        <div th:if="${param.error}" class="error-message">
+        <div class="error-message" th:if="${param.error}">
             Invalid username or password.
         </div>
-        <div th:if="${param.logout}" class="logout-message">
+        <div class="logout-message" th:if="${param.logout}">
             You have been logged out.
         </div>
 
